# engram

./: .gitignore  .mcp.json  AGENTS.md  CROSS_PLATFORM.md  Cargo.toml  LICENSE  MEMORY-SYSTEM copy.md  MEMORY-SYSTEM.md  MEMORY_CONFIG.md  Makefile  README.md  bundle.md  demo.py  install.sh  pyproject.toml
.amplifier/: hooks.json  settings.yaml
.amplifier/bundles/: engram-custom-paths.md  engram.md
.amplifier/bundles/canvas-memory/: bundle.md
.amplifier/hooks/: hooks.json  memory_tracker.sh  protocol_reminder.sh
.canvas/memory/: metadata-format.md
.claude/: CLAUDE.md  HOOKS_GUIDE.md  QUICK_START.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: memory-keeper.md  protocol-enforcer.md
.claude/commands/: memory-capture.md  memory-forget.md  memory-recall.md  memory-search.md  memory-stats.md
.claude/rules/: dual-write.md  memory-protocol.md  search-strategy.md
.claude/scripts/: memory-search.sh  protocol-reminder.sh  validate-capture.sh
.github/workflows/: release.yml
_protocols/: dual-write-decision.md  inline-capture.md  source-intake.md
amplifier_module_engram/: cli.py
amplifier_module_engram/db/: memory_md.py  schema.py  vector_store.py
amplifier_module_engram/embeddings/: __init__.py
amplifier_module_engram/hooks/: amplifier_hook.py  context_builder.py
amplifier_module_engram/mcp/: server.py
amplifier_module_engram/retrieval/: router.py  system1.py  system2.py
amplifier_module_engram/tools/: amplifier_tool.py  capture.py  manage.py  recall.py
amplifier_module_engram_hook/: __init__.py
amplifier_module_engram_lite/: cli.py
amplifier_module_engram_lite/db/: __init__.py  memory_md.py  memory_store.py  schema.py  vector_store.py
amplifier_module_engram_lite/embeddings/: ollama_provider.py
amplifier_module_engram_lite/hooks/: amplifier_hook.py  context_builder.py
amplifier_module_engram_lite/mcp/: __init__.py  server.py
amplifier_module_engram_lite/retrieval/: router.py  system1.py  system2.py  types.py
amplifier_module_engram_lite/tools/: amplifier_tool.py  capture.py  hot.py  manage.py  recall.py
amplifier_module_engram_lite_hook/: __init__.py
amplifier_module_engram_lite_tool/: __init__.py
amplifier_module_engram_tool/: __init__.py
behaviors/: engram-lite.yaml  engram.yaml
context/: file-format.md  memory-awareness.md  memory-instructions.md  memory-system.md
context/protocols/: cross-reference-cascade.md  inline-capture.md  knowledge-extraction.md  scope-routing.md
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: awareness.rs  daemon.rs  install.rs  lib.rs  load.rs  main.rs  mcp.rs  observe.rs
crates/engram-cli/tests/: access_control_test.rs  auth_config_test.rs  awareness_test.rs  cli_integration.rs  e2e_no_keychain_test.rs  init_test.rs  keychain_test.rs  multi_vault_test.rs  observe_load_test.rs  sync_approval_test.rs  sync_credentials_test.rs  vault_list_test.rs
crates/engram-core/: Cargo.toml  build.rs
crates/engram-core/bindings/: KOTLIN_USAGE.md  SWIFT_USAGE.md
crates/engram-core/bindings/kotlin/uniffi/engram_core/: engram_core.kt
crates/engram-core/bindings/python/: engram_core.py
crates/engram-core/bindings/swift/: engram_core.swift  engram_coreFFI.h  engram_coreFFI.modulemap
crates/engram-core/src/: config.rs  crypto.rs  engram_core.udl  ffi.rs  lib.rs  store.rs  vault.rs
crates/engram-core/tests/: integration_test.rs
crates/engram-search/: Cargo.toml
crates/engram-search/src/: embedder.rs  hybrid.rs  indexer.rs  lib.rs  vector.rs
crates/engram-search/tests/: integration_test.rs
crates/engram-sync/: Cargo.toml
crates/engram-sync/src/: auth.rs  azure.rs  backend.rs  bisync.rs  encrypt.rs  gcs.rs  lib.rs  manifest.rs  onedrive.rs  s3.rs
crates/engram-sync/tests/: integration_test.rs
docs/: AI-WORKING-README.md  ARCHITECTURE.md  EPIC-06-MEMORY-SYSTEM.md  FEATURES-LIST.md  MEMORY-TEST-SCRIPT.md  PRD.md  SPEC-AMPLIFIER-BUNDLE.md  SPEC-CLAUDE-CODE-PLUGIN.md  SPEC-EMBEDDINGS.md  SPEC-HOOKS.md  SPEC-PROTOCOLS.md  SPEC-RETRIEVAL.md  SPEC-STORAGE.md  SPEC-TAGGING.md  SPEC-TOOLS.md  VALIDATION.md
docs/plans/: 2026-02-24-tool-memory-search-design.md  2026-02-24-tool-memory-search.md  2026-04-24-phase3-sync-backends.md  2026-04-25-multi-vault-awareness.md  2026-04-25-phase2-search.md  2026-04-25-phase4-daemon-mcp.md  2026-04-25-phase5-amplifier-bundle.md  2026-04-25-phase6-uniffi-mobile.md  2026-04-26-config-credentials-split.md  2026-04-26-credential-storage-fix.md  2026-04-26-keychain-passphrase-fallback.md
hooks/: hooks.json  prompt-submit.sh  session-start.sh  stop.sh
modules/hook-memory-context/: pyproject.toml
modules/hook-memory-context/amplifier_module_hook_memory_context/: __init__.py
modules/hook-memory-context/tests/: test_hook.py
modules/hook-memory-observe/: .gitignore  pyproject.toml
modules/hook-memory-observe/amplifier_module_hook_memory_observe/: __init__.py
modules/hook-memory-observe/tests/: test_hook.py
modules/hooks-memory-protocol/: README.md  pyproject.toml
modules/hooks-memory-protocol/amplifier_module_hooks_memory_protocol/: __init__.py
modules/hooks-memory-protocol/tests/: test_memory_protocol_hook.py
modules/hooks-memory-tracker/: pyproject.toml
modules/hooks-memory-tracker/amplifier_module_hooks_memory_tracker/: __init__.py
modules/hooks-protocol-reminder/: pyproject.toml
modules/hooks-protocol-reminder/amplifier_module_hooks_protocol_reminder/: __init__.py  _search.py
modules/hooks-protocol-reminder/tests/: test_imports.py
modules/tool-memory/: pyproject.toml
modules/tool-memory-search/: pyproject.toml
modules/tool-memory-search/amplifier_module_tool_memory_search/: __init__.py  _search.py
modules/tool-memory-search/tests/: test_tool.py
modules/tool-memory/amplifier_module_tool_memory/: __init__.py
modules/tool-memory/tests/: conftest.py  test_tools.py
scripts/: canvas-memory-search.py
scripts/tests/: test_memory_search.py
src/amplifier_module_engram_lite/: __init__.py  cli.py
tests/: conftest.py  test_bundle_config.py  test_db.py  test_placeholder.py  test_tools.py
(+19 files in other folders)
