[workspace]
    members = [
        "crates/engram-core",
        "crates/engram-cli",
        "crates/engram-sync",
        "crates/engram-search",
    ]
    resolver = "2"

    [workspace.metadata.dist]
    cargo-dist-version = "0.31.0"
    ci = "github"
    installers = ["shell"]
    targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]

    [profile.dist]
    inherits = "release"
    lto = "thin"
