[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-engram-lite"
version = "0.1.0"
description = "Persistent vector memory for AI agents — Amplifier module and Claude Code plugin"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Ken Chow", email = "kenchow@microsoft.com" }]
keywords = ["amplifier", "memory", "sqlite-vec", "rag", "llm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "amplifier-core>=1.0.0",
    "sqlite-vec>=0.1.6",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "click>=8.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
azure = ["openai>=1.0.0", "azure-identity>=1.15.0"]
ollama = ["ollama>=0.2.0"]
all = ["openai>=1.0.0", "azure-identity>=1.15.0", "ollama>=0.2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "pyright",
    "hatch",
]

[project.scripts]
engram-lite = "amplifier_module_engram_lite.cli:main"

[project.entry-points."amplifier.modules"]
engram-lite-hook = "amplifier_module_engram_lite.hooks.amplifier_hook:mount"
engram-lite-tool = "amplifier_module_engram_lite.tools.amplifier_tool:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_engram_lite"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"demo.py" = ["E501"]  # terminal display strings — intentionally long

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
