[package]
    name = "engram"
    version = "0.1.0"
    edition = "2021"

    [[bin]]
    name = "engram"
    path = "src/main.rs"

    [dependencies]
    engram-core = { path = "../engram-core" }
    engram-sync = { path = "../engram-sync" }
    clap = { version = "4", features = ["derive"] }
    directories = "5"
    thiserror = "2"
    anyhow = "1"
    rpassword = "7"
    tokio = { version = "1", features = ["full"] }

    [dev-dependencies]
    assert_cmd = "2"
    predicates = "3"
    