[package]
    name = "engram"
    version = "0.1.0"
    edition = "2021"

    [lib]
    name = "engram"
    path = "src/lib.rs"

    [[bin]]
    name = "engram"
    path = "src/main.rs"

    [dependencies]
    engram-core = { path = "../engram-core" }
    engram-sync = { path = "../engram-sync" }
    engram-search = { path = "../engram-search" }
    clap = { version = "4", features = ["derive", "env"] }
    directories = "5"
    thiserror = "2"
    anyhow = "1"
    rpassword = "7"
    tokio = { version = "1", features = ["full"] }
    open = "5"
    reqwest = { version = "0.12", features = ["json", "blocking"] }
    serde_json = "1"
    serde = { version = "1", features = ["derive"] }
    notify = "6"
    shellexpand = "3"
    base64 = { version = "0.22", features = ["std"] }
bytes = "1"

    [dev-dependencies]
    assert_cmd = "2"
    predicates = "3"
    serial_test = "3"
    tempfile = "3"
