[package]
    name = "engram-core"
    version = "0.1.0"
    edition = "2021"

    [dependencies]
    chacha20poly1305 = "0.10"
    argon2 = "0.5"
    keyring = "2"
    rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
    rand = "0.8"
    thiserror = "2"
    serde = { version = "1", features = ["derive"] }
    uuid = { version = "1", features = ["v4"] }
    hex = "0.4"

    [dev-dependencies]
    tempfile = "3"
    