[package]
    name = "engram-search"
    version = "0.1.0"
    edition = "2021"

    [dependencies]
    engram-core = { path = "../engram-core" }
    tantivy = "0.22"
    fastembed = "4"
    sqlite-vec = "0.1"
    rusqlite = { version = "0.31", features = ["bundled"] }
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    thiserror = "2"
    sha2 = "0.10"
    hex = "0.4"

    [dev-dependencies]
    tempfile = "3"
    