[package]
name = "engram-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
engram-core = { path = "../engram-core" }
object_store = { version = "0.11", features = ["aws", "azure", "gcp"] }
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = { version = "0.22", features = ["std"] }
open = "5"
keyring = "2"
bytes = "1"
async-trait = "0.1"
url = "2"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
