    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [project]
    name = "amplifier-module-hook-memory-context"
    version = "0.1.0"
    description = "Amplifier hook that injects engram memory context at session start"
    requires-python = ">=3.11"
    dependencies = []

    [tool.hatch.build.targets.wheel]
    packages = ["amplifier_module_hook_memory_context"]
    