[project]
name = "amplifier-module-hooks-memory-tracker"
version = "0.1.0"
description = "Memory capture tracker hook for Canvas Memory system"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core>=0.8.0",
]

[project.entry-points."amplifier.modules"]
hooks-memory-tracker = "amplifier_module_hooks_memory_tracker:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
