[project]
name = "amplifier-module-hooks-protocol-reminder"
version = "0.1.0"
description = "Memory protocol reminder hook for Canvas Memory system"
requires-python = ">=3.11"
dependencies = [
    "amplifier-module-tool-memory-search @ git+https://github.com/kenotron-ms/engram@main#subdirectory=modules/tool-memory-search",
]

[project.entry-points."amplifier.modules"]
hooks-protocol-reminder = "amplifier_module_hooks_protocol_reminder:mount"

[tool.pyright]
reportMissingImports = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-module-tool-memory-search = { path = "../tool-memory-search" }

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core@main",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
