[project]
name = "amplifier-module-tool-memory-search"
version = "0.1.0"
description = "Explicit memory search tool for Canvas Memory system"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
tool-memory-search = "amplifier_module_tool_memory_search:mount"

[tool.pyright]
reportMissingImports = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core@main",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
